--- a/ROIstyles.css
+++ b/ROIstyles.css
@@ -10,7 +10,7 @@ body {
     margin: 0 auto;
 }
 
-h1, h2 {
+h1, h2, h3 {
     text-align: center;
 }
 
@@ -28,6 +28,9 @@ h1, h2, h3 {
 
 h3 {
     font-size: 24px;
+    background-color: white;
+    border-radius: 15px;
+    width: 250px;
 }
 
 button {
@@ -60,7 +63,7 @@ h3, label, input, button, p {
 
 #initial, #results {
     width: 49.75%;
-    height: 525px;
+    height: 530px;
     padding: 0;
     border-top: 2px solid #feb300;
     border-bottom: 2px solid #feb300;
@@ -68,16 +71,19 @@ h3, label, input, button, p {
 
 .info, button {
     padding: 10px;
+}
+
+.info, button, h3 {
     border-radius: 15px;
 }
 
-.info {
+.info, h3 {
     border: 2px solid #feb300;
     margin-left: auto;
     margin-right: auto;
 }
 
-#initial, #results, p {
+#initial, #results, .info {
     background-color: #fff5d7;
 }
 
@@ -89,3 +95,7 @@ h3, label, input, button, p {
     margin-top: 10px;
 }
 
+.roi-border {
+    border: 2px solid #feb300;
+    padding: 4px;
+}
