--- a/ROIstyles.css
+++ b/ROIstyles.css
@@ -96,6 +96,7 @@ h3, label, input, button, p {
 }
 
 .roi-border {
+    background-color: white;
     border: 2px solid #feb300;
     padding: 4px;
 }
